--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts"
+    "start": "nodemon src/server.ts",
+    "run": "node /src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
     "ts-node": "^10.9.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
     "typescript": "^4.8.3"
